deployments/kubernetes/52_deployment_web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itwiki-web
  labels:
    stack: bluespice
    app: web
    instance: itwiki
spec:
  selector:
    matchLabels:
      stack: bluespice
      app: bluespice
      instance: itwiki
  template:
    metadata:
      labels:
        stack: bluespice
        app: bluespice
        instance: itwiki
    spec:
      volumes:
      - name: pvc-itwiki-bluespice-images
        persistentVolumeClaim:
          claimName: pvc-itwiki-bluespice-images
      - name: pvc-itwiki-bluespice-extensions
        persistentVolumeClaim:
          claimName: pvc-itwiki-bluespice-extensions
      - name: pvc-itwiki-bluespice-settings
        persistentVolumeClaim:
          claimName: pvc-itwiki-bluespice-settings
      containers:
        - imagePullPolicy: Always
          name: container-0
          image: suterdev/bluespice-web:latest
          ports:
          - name: http
            protocol: TCP
            containerPort: 3000
          volumeMounts:
          - mountPath: /images
            name: pvc-itwiki-bluespice-images
          - mountPath: /extensions
            name: pvc-itwiki-bluespice-extensions
          - mountPath: /settings/settings.d
            name: pvc-itwiki-bluespice-settings
      restartPolicy: Always
  replicas: 1
