deployments/kubernetes/61_service_web.yml
apiVersion: v1
kind: Service
metadata:
  name: itwiki-web
spec:
  selector:
      stack: bluespice
      app: web
      instance: itwiki
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  sessionAffinity: None
  type: ClusterIP
