deployments/kubernetes/90_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itwiki-ingress
spec:
  rules:
  - host: testk3s02.suter.dev
    http:
      paths:
      - backend:
          service:
            name: itwiki-web
            port:
              number: 3000
        path: /
        pathType: Prefix
